--- a/meta/makefile.pret
+++ b/meta/makefile.pret
@@ -15,6 +15,8 @@
     :runtime-requirement    [ :on "RDF::Query 2.913"^^:CpanId ];
     :runtime-requirement    [ :on "Types::Standard"^^:CpanId ];     
     :runtime-requirement    [ :on "Scalar::Util"^^:CpanId ]; 
+    :runtime-requirement    [ :on "Log::Contextual"^^:CpanId ]; 
+    :runtime-requirement    [ :on "Log::Log4perl"^^:CpanId ];
     :runtime-requirement    [ :on "URI"^^:CpanId ]; 
     :runtime-requirement    [ :on "URI::Escape::XS"^^:CpanId ]; 
     :develop-recommendation [ :on "Dist::Inkt 0.001"^^:CpanId ];
